@@ -1,6 +1,6 @@
 
-R : Copyright 2003, The R Foundation for Statistical Computing
-Version 1.9.0 Under development (unstable) (2003-12-03), ISBN 3-900051-00-3
+R : Copyright 2004, The R Foundation for Statistical Computing
+Version 1.9.0 Under development (unstable) (2004-03-03), ISBN 3-900051-00-3
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -196,7 +196,7 @@ NaNs produced in: log(x)
 > n <- 10000;all(abs(rErr(lgamma(1:n),cumsum(log(c(1,1:(n-1)))))) < 100*Meps)
 [1] TRUE
 > 
-> all(is.nan(gamma(0:-4))) # + warn.
+> all(is.nan(gamma(0:-47))) # + warn.
 [1] TRUE
 Warning message: 
 NaNs produced in: gamma(x) 
@@ -306,5 +306,5 @@ NaNs produced in: gamma(x)
 > 
 > ## Last Line:
 > cat('Time elapsed: ', proc.time() - .proctime00,'\n')
-Time elapsed:  2.75 0.05 2.84 0 0 
+Time elapsed:  1.35 0.01 1.39 0 0 
 > 
